added comments and finished readme

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en-us">
-
+<!-- This is the link to the CSS. -->
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>website</title>
 </head>
-
+<!-- This is the navigation section. -->
 <body>
     <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
@@ -24,9 +24,10 @@
             </ul>
         </nav>
     </header>
+    <!-- These sections are the boxes of infomation of the business. -->
     <section class="hero"></section>
     <section class="content">
-        <article class="search-engine-optimization">
+        <article id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="optimization" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
@@ -48,6 +49,7 @@
             </p>
         </article>
     </section>
+    <!-- This is the side bar on the right about benefits. -->
     <aside class="benefits">
         <section class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -71,8 +73,9 @@
             </p>
         </section>
     </aside>
+    <!-- Copyrights info -->
     <footer class="footer">
-        <h2>Made with ❤️️ by Horiseon</h2>
+        <h4>Made with ❤️️ by Horiseon</h4>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
